# job_match

./: .env.example  .gitignore  pyproject.toml  run.py
app/: experience.py  main.py  parser.py  skillExtraction.py
backend/: .gitignore  pyproject.toml  run.py
backend/app/: config.py  experience.py  main.py  parser.py  skillExtraction.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  config.js  index.css
frontend/src/components/: Homepage.jsx  ScoreChecker.jsx
frontend/src/routes/: api.js  uploadRoute.js
