[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "numpy==1.23.5",
    "pypdf>=6.11.0",
    "pyresparser>=1.0.6",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "resume-parser>=0.8.4",
    "sentence-transformers>=5.5.0",
    "spacy<3.0",
    "transformers>=5.8.1",
    "uvicorn>=0.46.0",
]
